--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>Welcome <%= @email %>!</p>
+<p><%= @email %>様、抄読会.comにようこそ。</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>以下のリンクにて、このアカウントのメールアドレス認証が完了します:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to 'アカウント認証', confirmation_url(@resource, confirmation_token: @token) %></p>
