--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= @resource.email %>様</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>規定回数以上ログインに失敗したため、アカウントがロックされました。</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>ロック解除のためには、以下のリンクをクリックしてください:</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to 'アカウントのロックを解除する', unlock_url(@resource, unlock_token: @token) %></p>
