--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <%= link_to 'プロフィール変更', edit_user_registration_path %> |
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
       <% else %>
-        <%= link_to "サインイン", new_user_registration_path %> |
+        <%= link_to "新規会員登録", new_user_registration_path %> |
         <%= link_to "ログイン", new_user_session_path %>
       <% end %>
     </nav>
