--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,12 +13,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password, '新パスワード' %> <i>(変更しない場合は空欄)</i><br />
+    <%= f.label :password, '新しいパスワード' %> <i>(変更しない場合は空欄でも大丈夫です)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation, '新パスワード確認' %><br />
+    <%= f.label :password_confirmation, '新しいパスワードの確認' %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
@@ -34,6 +34,6 @@
 
 <h3>アカウントを消去する</h3>
 
-<p>ご満足いただけませんでしたか？ <%= button_to "アカウント消去", registration_path(resource_name), data: { confirm: "本当によろしいですか?" }, method: :delete %></p>
+<p><%= button_to "アカウント消去", registration_path(resource_name), data: { confirm: "本当によろしいですか?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
