サイドバー作成

--- a/app/assets/stylesheets/themes/main.css.scss
+++ b/app/assets/stylesheets/themes/main.css.scss
@@ -8,25 +8,39 @@ body {
 
 .app-identity {
   padding: 10px;
-  color: darken($IDENTITY_COLOR, 5);
-  font-size: 30px;
-  font-weight: 600;
-  font-family: serif;
-  .darken {
-    color: darken($IDENTITY_COLOR, 10);
-    font-size: 36px;
+  a {
+    color: darken($IDENTITY_COLOR, 5);
+    font-size: 30px;
+    font-weight: 600;
+    font-family: serif;
+    &:hover {
+      color: lighten($IDENTITY_COLOR, 5);
+      .darken {
+        color: $IDENTITY_COLOR;
+      }
+    }
+    .darken {
+      color: darken($IDENTITY_COLOR, 10);
+      font-size: 36px;
+    }
   }
 }
 
-.header {
-  position: fixed;
-  top: 0px; left: 0px;
-  background-color: $IDENTITY_COLOR;
-  color: $WHITE;
-
-  height: 60px;
-  width: 100%;
-  a {
-    color: $WHITE;
+.interface-container {
+  width: 70%;
+  height: 100%;
+  max-width: 1080px;
+  min-width: 900px;
+  margin: auto;
+  .sidebar {
+    width: 280px;
+    height: 100%;
+    float: left;
+    box-sizing: border-box;
+  }
+  .content {
+    height: 100%;
+    float: left;
+    padding: 10px;
   }
 }
