--- a/app/views/layouts/_identity.html.erb
+++ b/app/views/layouts/_identity.html.erb
@@ -1,3 +1,5 @@
 <div class='app-identity'>
-  <span class='darken'>抄読会</span>.com
+  <%= link_to root_path do %>
+    <span class='darken'>抄読会</span>.com
+  <% end %>
 </div>
