--- a/app/views/sidebar/_menus.html.erb
+++ b/app/views/sidebar/_menus.html.erb
@@ -1,2 +1,11 @@
-<div class='register-paper'>
+<div class='menu'>
+  <%= link_to '', class: 'button register-paper flat-button-identity' do %>
+    <i class="fa fa-file-text-o"></i>読んだ論文を登録する
+  <% end %>
+  <%= link_to '', class: 'button search-paper flat-button-identity1' do %>
+    <i class="fa fa-search"></i>論文を探す
+  <% end %>
+  <%= link_to '', class: 'button favorite-paper flat-button-identity2' do %>
+    <i class="fa fa-star"></i>お気に入り
+  <% end %>
 </div>
