--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MedtechPaper</title>
+  <title>抄読会.com</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-   <div id='alert' style='display: none;'>
+  <div id='alert' style='display: none;'>
     <%= flash[:alert] %>
   </div>
   <div id='success' style='display: none;'>
