--- a/app/assets/stylesheets/themes/layouts/sidebar.css.scss
+++ b/app/assets/stylesheets/themes/layouts/sidebar.css.scss
@@ -16,12 +16,14 @@
     .button {
       height: 40px;
       line-height: 30px;
-      font-size: 16px;
+      font-size: 14px;
       width: 100%;
       margin: 10px 0;
+      vertical-align: middle;
       i {
         font-size: 24px;
-        margin-right: 6px;
+        margin-right: 10px;
+        vertical-align: middle;
       }
     }
   }
