--- a/app/assets/stylesheets/themes/main.css.scss
+++ b/app/assets/stylesheets/themes/main.css.scss
@@ -27,20 +27,23 @@ body {
 }
 
 .interface-container {
+  position: relative;
   width: 70%;
   height: 100%;
-  max-width: 1080px;
-  min-width: 900px;
   margin: auto;
+  padding-left: 280px;
   .sidebar {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 280px;
     min-height: 100%;
-    float: left;
     box-sizing: border-box;
   }
   .content {
     min-height: 100%;
-    float: left;
+    width: 100%;
+    box-sizing: border-box;
     padding: 10px;
   }
 }
