--- a/app/assets/stylesheets/themes/layouts/paper_list.css.scss
+++ b/app/assets/stylesheets/themes/layouts/paper_list.css.scss
@@ -54,27 +54,50 @@
         overflow: hidden;
         padding: 0 10px;
         text-overflow: ellipsis;
+        color: $GRAY77;
         white-space: nowrap;
       }
     }
     .detail {
-      .popularity {
-
-      }
-      .source {
-
+      padding: 20px 15%;
+      position: relative;
+      .close-bar {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 30px;
+        cursor: pointer;
       }
       .title {
-
+        padding: 10px 0;
+        font-size: 24px;
+        font-weight: 600;
+        font-family: sans-serif;
+      }
+      .popularity {
+        display: inline-block;
+        padding: 5px 5px 5px 0;
+        font-size: 16px;
+        font-weight: 600;
+      }
+      .source {
+        display: inline-block;
+        padding: 5px 0;
+        font-size: 16px;
+        color: $GRAY88;
       }
       .authors {
-
+        font-size: 16px;
+        padding: 10px 0;
       }
       .abstract {
-
+        font-size: 14px;
+        line-height: 24px;
+        padding: 5px 0;
       }
       .pubmed-link {
-
+        padding: 10px 0;
       }
     }
   }
