--- a/app/views/layouts/_paper_list.html.erb
+++ b/app/views/layouts/_paper_list.html.erb
@@ -1,4 +1,4 @@
-<h1 class='paper-list-title'><%= @title %></h1>
+<h1 class='paper-list-title'><%= title %></h1>
 <div class='paper-list'>
   <% papers.each_with_index do |p, idx| %>
     <%= render 'layouts/paper', paper: p, is_last: (idx + 1 == papers.count) %>
