--- a/app/views/papers/_paper.html.erb
+++ b/app/views/papers/_paper.html.erb
@@ -22,7 +22,7 @@
       <%= paper.popularity %>
     </div>
     <div class='source'>
-      <%= "#{paper.journal_name} #{paper.published_date};#{paper.volume}(#{paper.issue}):#{paper.pages}" %>
+      <%= "#{paper.journal_name} #{paper.published_date.try(:strfdate, '%Y-%m-%d')};#{paper.volume}(#{paper.issue}):#{paper.pages}" %>
     </div>
     <div class='authors'>
       <%= paper.authors_list %>
