--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<%= render 'layouts/paper_list', title: @title, papers: @papers %>
+<%= render 'papers/paper_list', title: @title, papers: @papers %>
