お気に入りと読んだ論文のセットアップ、paperlist#show等

--- a/app/views/papers/_paper.html.erb
+++ b/app/views/papers/_paper.html.erb
@@ -18,11 +18,13 @@
     <div class='title'>
       <%= paper.title %>
     </div>
-    <div class='popularity'>
-      <%= paper.popularity %>
-    </div>
+    <% if paper.popularity.present? %>
+      <div class='popularity'>
+        <%= paper.popularity %>
+      </div>
+    <% end %>
     <div class='source'>
-      <%= "#{paper.journal_name} #{paper.published_date.try(:strfdate, '%Y-%m-%d')};#{paper.volume}(#{paper.issue}):#{paper.pages}" %>
+      <%= "#{paper.journal_name} #{paper.published_date.try(:strfdate, '%Y/%m/%d')};#{paper.volume}(#{paper.issue}):#{paper.pages}" %>
     </div>
     <div class='authors'>
       <%= paper.authors_list %>
