--- a/app/assets/stylesheets/modules/flat_button.css.scss
+++ b/app/assets/stylesheets/modules/flat_button.css.scss
@@ -77,17 +77,10 @@
 }
 
 @mixin flat-button-identity1 {
-  @include flat-button-base;
+  @include flat-button-identity;
 
   border-color: darken($IDENTITY_COLOR, 15);
   background-color: darken($IDENTITY_COLOR, 10);
-  color: #fff;
-
-  &:hover {
-    opacity: 0.9;
-    color: #fff;
-  }
-
   &:active {
     background-color: darken($IDENTITY_COLOR, 5);
   }
@@ -99,17 +92,10 @@
 
 
 @mixin flat-button-identity2 {
-  @include flat-button-base;
+  @include flat-button-identity;
 
   border-color: darken($IDENTITY_COLOR, 10);
   background-color: darken($IDENTITY_COLOR, 5);
-  color: #fff;
-
-  &:hover {
-    opacity: 0.9;
-    color: #fff;
-  }
-
   &:active {
     background-color: darken($IDENTITY_COLOR, 0);
   }
