--- a/app/views/sidebar/_menus.html.erb
+++ b/app/views/sidebar/_menus.html.erb
@@ -1,17 +1,17 @@
 <div class='menu'>
-  <%= link_to '', class: 'button register-paper flat-button-identity' do %>
+  <%= link_to search_papers_path, class: 'button register-paper flat-button-identity' do %>
     <i class="fa fa-plus"></i>読んだ論文を登録する
   <% end %>
   <%= link_to '', class: 'button search-paper flat-button-identity1' do %>
     <i class="fa fa-search"></i>読まれている論文を探す
   <% end %>
-  <%= link_to '', class: 'button favorite-paper flat-button-identity2' do %>
+  <%= link_to paper_lists_path, class: 'button favorite-paper flat-button-identity2' do %>
     <i class="fa fa-list"></i>抄読会（論文リスト）一覧
   <% end %>
-  <%= link_to '', class: 'button register-paper flat-button-identity' do %>
+  <%= link_to new_paper_list_path, class: 'button register-paper flat-button-identity' do %>
     <i class="fa fa-file-text-o"></i>抄読会（論文リスト）をつくる
   <% end %>
-  <%= link_to '', class: 'button search-paper-list flat-button-identity1' do %>
+  <%= link_to search_paper_lists_path, class: 'button search-paper-list flat-button-identity1' do %>
     <i class="fa fa-search-plus"></i>抄読会（論文リスト）を探す
   <% end %>
 </div>
