--- a/app/views/paper_lists/index.html.erb
+++ b/app/views/paper_lists/index.html.erb
@@ -1,1 +1,1 @@
-<%= render 'paper_lists/paper_list_list', paper_lists: @paper_lists, title: @title %>
+<%= render 'paper_lists/paper_lists', paper_lists: @paper_lists, title: @title %>
