--- a/app/views/paper_lists/show.html.erb
+++ b/app/views/paper_lists/show.html.erb
@@ -1,1 +1,1 @@
-<%= render 'papers/paper_list', papers: @papers, title: @paper_list.title %>
+<%= render 'papers/papers', papers: @papers, title: @paper_list.title %>
