--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -1,2 +1,2 @@
 <%= render 'papers/search_form' %>
-<%= render 'papers/paper_list', papers: @papers, title: @title %>
+<%= render 'papers/papers', papers: @papers, title: @title %>
