--- a/app/assets/stylesheets/modules/flat_button.css.scss
+++ b/app/assets/stylesheets/modules/flat_button.css.scss
@@ -47,7 +47,8 @@
 
   &:hover,
   &:active {
-    opacity: 0.9;
+    opacity: 0.7;
+    color: #333;
   }
 }
 
@@ -55,18 +56,21 @@
   @include flat-button-normal;
 }
 
-@mixin flat-button-identity {
+@mixin flat-button-outline {
   @include flat-button-base;
 
-  border-color: lighten($IDENTITY_COLOR, 0);
-  background-color: lighten($IDENTITY_COLOR, 5);
   color: #fff;
-
   &:hover {
     opacity: 0.9;
     color: #fff;
   }
+}
 
+@mixin flat-button-identity {
+  @include flat-button-outline;
+
+  border-color: lighten($IDENTITY_COLOR, 0);
+  background-color: lighten($IDENTITY_COLOR, 5);
   &:active {
     background-color: lighten($IDENTITY_COLOR, 10);
   }
@@ -77,7 +81,7 @@
 }
 
 @mixin flat-button-identity1 {
-  @include flat-button-identity;
+  @include flat-button-outline;
 
   border-color: darken($IDENTITY_COLOR, 15);
   background-color: darken($IDENTITY_COLOR, 10);
@@ -90,9 +94,8 @@
   @include flat-button-identity1;
 }
 
-
 @mixin flat-button-identity2 {
-  @include flat-button-identity;
+  @include flat-button-outline;
 
   border-color: darken($IDENTITY_COLOR, 10);
   background-color: darken($IDENTITY_COLOR, 5);
@@ -104,3 +107,32 @@
 .flat-button-identity2 {
   @include flat-button-identity2;
 }
+
+@mixin flat-button-lightorange {
+  @include flat-button-outline;
+
+  border-color: lighten($LIGHTORANGE2, 0);
+  background-color: lighten($LIGHTORANGE2, 5);
+  &:active {
+    background-color: lighten($LIGHTORANGE2, 10);
+  }
+}
+
+.flat-button-lightorange {
+  @include flat-button-lightorange;
+}
+
+@mixin flat-button-identity-red {
+  @include flat-button-outline;
+
+  border-color: lighten($RED1, 0);
+  background-color: lighten($RED1, 5);
+  &:active {
+    background-color: lighten($RED1, 10);
+  }
+}
+
+.flat-button-identity-red {
+  @include flat-button-identity-red;
+}
+
