--- a/app/views/paper_lists/_paper_lists.html.erb
+++ b/app/views/paper_lists/_paper_lists.html.erb
@@ -1,6 +1,6 @@
 <h1 class='paper-list-list-title'><%= title %></h1>
 <div class='paper-list-list'>
   <% paper_lists.each_with_index do |p, idx| %>
-    <%= render 'paper_lists/single_paper_list', paper_list: p, is_last: (idx + 1 == paper_lists.count) %>
+    <%= render 'paper_lists/paper_list', paper_list: p, is_last: (idx + 1 == paper_lists.count) %>
   <% end %>
 </div>
