--- a/app/assets/stylesheets/themes/papers.css.scss
+++ b/app/assets/stylesheets/themes/papers.css.scss
@@ -22,14 +22,14 @@
   }
 }
 
-.paper-list-title {
+.papers-title {
   font-family: serif;
   font-size: 24px;
   color: $GRAY99;
   padding: 0 20px;
 }
 
-.paper-list {
+.papers {
   padding: 20px;
   .paper {
     background-color: $WHITE;
