--- a/app/views/paper_lists/show.html.erb
+++ b/app/views/paper_lists/show.html.erb
@@ -1,1 +1,1 @@
-<%= render 'papers/papers', papers: @papers, title: @paper_list.title %>
+<%= render 'paper_lists/paper_list_detail', paper_list: @paper_list %>
