--- a/app/views/papers/_papers.html.erb
+++ b/app/views/papers/_papers.html.erb
@@ -1,5 +1,5 @@
-<h1 class='paper-list-title'><%= title %></h1>
-<div class='paper-list'>
+<h1 class='papers-title'><%= title %></h1>
+<div class='papers'>
   <% papers.each_with_index do |p, idx| %>
     <%= render 'papers/paper', paper: p, is_last: (idx + 1 == papers.count) %>
   <% end %>
