--- a/app/assets/stylesheets/themes/paper_lists.css.scss
+++ b/app/assets/stylesheets/themes/paper_lists.css.scss
@@ -19,14 +19,14 @@
   }
 }
 
-.paper-list-list-title {
+.paper-lists-title {
   font-family: serif;
   font-size: 24px;
   color: $GRAY99;
   padding: 0 20px;
 }
 
-.paper-list-list {
+.paper-lists {
   padding: 20px;
   .single-paper-list {
     background-color: $WHITE;
