--- a/app/views/paper_lists/_paper_list.html.erb
+++ b/app/views/paper_lists/_paper_list.html.erb
@@ -18,8 +18,8 @@
     </div>
     <%= link_to '削除', paper_list_path(id: paper_list.id),
                                method: :delete,
-                               class: 'destroy-btn flat-button-identity-red',
+                               class: 'destroy-btn flat-button-red',
                                data: {confirm: '本当に削除してよろしいですか？'} %>
   <% end %>
-  <%= link_to 'リストを見る', paper_list_path(id: paper_list.id), class: 'show-btn flat-button-lightorange' %>
+  <%= link_to 'リストを見る', paper_list_path(id: paper_list.id), class: 'show-btn flat-button-orange' %>
 </div>
