--- a/app/assets/stylesheets/themes/paper_lists.css.scss
+++ b/app/assets/stylesheets/themes/paper_lists.css.scss
@@ -66,7 +66,7 @@
       display: inline-block;
       padding-right: 20px;
     }
-    .show-btn, .destroy-btn {
+    .show-btn, .edit-btn, .destroy-btn {
       display: inline-block;
       float: right;
       box-sizing: border-box;
