--- a/app/views/paper_lists/_paper_list.html.erb
+++ b/app/views/paper_lists/_paper_list.html.erb
@@ -20,6 +20,7 @@
                                method: :delete,
                                class: 'destroy-btn flat-button-red',
                                data: {confirm: '本当に削除してよろしいですか？'} %>
+    <%= link_to '編集', edit_paper_list_path(id: paper_list.id), class: 'edit-btn flat-button-orange' %>
   <% end %>
   <%= link_to 'リストを見る', paper_list_path(id: paper_list.id), class: 'show-btn flat-button-orange' %>
 </div>
