--- a/app/views/papers/_search_form.html.erb
+++ b/app/views/papers/_search_form.html.erb
@@ -1,5 +1,5 @@
 <div class='paper-search-form'>
-  登録したい論文を探す
+  <div class='form-title'>登録したい論文を探す</div>
   <%= form_tag papers_path, method: :get do %>
     <p>
       <%= text_field_tag :term, params[:term], required: true, class: 'keyword-input', placeholder: 'キーワード' %>
