--- a/app/views/sidebar/_main.html.erb
+++ b/app/views/sidebar/_main.html.erb
@@ -1,5 +1,5 @@
 <div class='sidebar'>
   <%= render 'layouts/identity' %>
   <%= render 'sidebar/user_info' %>
-  <%= render 'sidebar/menus' %>
+  <%= render 'sidebar/menu' %>
 </div>
