--- a/app/views/paper_lists/_paper_list_detail.html.erb
+++ b/app/views/paper_lists/_paper_list_detail.html.erb
@@ -1,5 +1,5 @@
 <div class='paper-list-detail'>
-  <div class='title-area'>
+  <div class='paper-list-metainfo'>
     <div class='icon'>
       <% if paper_list.favorite? %>
         <i class="fa fa-star"></i>
@@ -21,12 +21,19 @@
                                  method: :delete,
                                  class: 'destroy-btn flat-button-red',
                                  data: {confirm: '本当に削除してよろしいですか？'} %>
-      <%= link_to '編集', edit_paper_list_path(id: paper_list.id), class: 'edit-btn flat-button-orange' %>
+      <%= link_to '編集', edit_paper_list_path(id: paper_list.id), class: 'edit-btn flat-button-normal' %>
     <% end %>
   </div>
   <div class='papers'>
     <% paper_list.papers.each_with_index do |p, idx| %>
-      <%= render 'papers/paper', paper: p, is_last: (idx + 1 == papers.count) %>
+      <%= render 'papers/paper', paper: p, is_last: (idx + 1 == paper_list.papers.count), user: user, paper_list: paper_list %>
     <% end %>
+    <% if paper_list.papers.count == 0 %>
+      <p class='attention'>論文が登録されていません</p>
+    <% end %>
+  </div>
+  <div class='paper-list-menu'>
+    <%= link_to 'リストに論文を登録する', search_papers_path, class: 'paper-search-btn flat-button-identity2' %>
+    <%= link_to 'リストを共有する', '', class: 'share-btn flat-button-normal' %>
   </div>
 </div>
