--- a/app/views/paper_lists/edit.html.erb
+++ b/app/views/paper_lists/edit.html.erb
@@ -1,5 +1,5 @@
 <div class='paper-list-form'>
-  <p>リスト：<%= @paper_list.title %>の編集</p>
+  <div class='form-title'>リスト：<%= @paper_list.title %>の編集</div>
   <%= form_for(@paper_list, url: paper_list_path(id: @paper_list.id) ,method: :put) do |f| %>
     <p>
       <%= f.label :title, 'リスト名' %>
@@ -8,7 +8,7 @@
     <p>
       <%= f.label :is_public, 'このリストを公開する' %>
       <%= f.check_box :is_public %>
-      <%= f.submit '編集完了する', class: 'submit-btn flat-button-identity2', data: {disable_with: '送信中...'} %>
+      <%= f.submit '編集を完了する', class: 'submit-btn flat-button-identity2', data: {disable_with: '送信中...'} %>
     </p>
   <% end %>
 </div>
