deviseエラーレンダリング

--- a/app/assets/stylesheets/themes/main.css.scss
+++ b/app/assets/stylesheets/themes/main.css.scss
@@ -43,6 +43,7 @@ body {
   .content {
     min-height: 100%;
     width: 100%;
+    min-width: 840px;
     box-sizing: border-box;
     padding: 10px;
   }
