--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<%= render 'papers/papers', title: @title, papers: @papers %>
+<%= render 'papers/papers', title: @title, papers: @papers, user: current_user %>
