--- a/app/views/paper_lists/new.html.erb
+++ b/app/views/paper_lists/new.html.erb
@@ -1,5 +1,5 @@
 <div class='paper-list-form'>
-  <p>新しい抄読会（論文リスト）を作成する</p>
+  <div class='form-title'>新しい抄読会（論文リスト）を作成する</div>
   <%= form_for(@paper_list, url: paper_lists_path) do |f| %>
     <p>
       <%= f.label :title, 'リスト名' %>
