--- a/app/assets/stylesheets/themes/paper_lists.css.scss
+++ b/app/assets/stylesheets/themes/paper_lists.css.scss
@@ -9,16 +9,23 @@
   .form-title {
     font-size: 20px;
   }
-  .title-input {
+  .title-input, .email-input {
     font-size: 14px;
     line-height: 24px;
     width: 500px;
+    margin-bottom: 10px;
+  }
+  .remove-shared-user {
+    margin-left: 10px;
   }
   .submit-btn {
     float: right;
     width: 160px;
     font-size: 14px;
     line-height: 24px;
+  }
+  .end-of-form {
+    clear: both;
   }
 }
 
