--- a/app/views/paper_lists/shared_new.html.erb
+++ b/app/views/paper_lists/shared_new.html.erb
@@ -1,12 +1,11 @@
 <div class='paper-list-form'>
-  <div class='form-title'>リスト：<%= @paper_list.title %>の編集</div>
-  <%= nested_form_for(@paper_list, url: paper_list_path(id: @paper_list.id) ,method: :put) do |f| %>
+  <div class='form-title'>新しい抄読会を作成する</div>
+  <%= nested_form_for(@paper_list, url: paper_lists_path) do |f| %>
     <p>
-      <%= f.label :title, 'リスト名' %>
-      <%= f.text_field :title, required: true, class: 'title-input' %>
+      <%= f.text_field :title, required: true, class: 'title-input', placeholder: '抄読会名' %>
     </p>
     <p>
-      <%= f.label :is_public, 'このリストを公開する' %>
+      <%= f.label :is_public, 'この抄読会を公開する' %>
       <%= f.check_box :is_public %>
     </p>
     <p class='form-title'>
@@ -22,7 +21,7 @@
       </p>
     </p>
     <p>
-      <%= f.submit '編集を完了する', class: 'submit-btn flat-button-identity2', data: {disable_with: '送信中...'} %>
+      <%= f.submit '作成する', class: 'submit-btn flat-button-identity2', data: {disable_with: '作成中...'} %>
     </p>
   <% end %>
   <div class='end-of-form'></div>
