--- a/app/views/paper_lists/shared_new.html.erb
+++ b/app/views/paper_lists/shared_new.html.erb
@@ -5,7 +5,7 @@
       <%= f.text_field :title, required: true, class: 'title-input', placeholder: '抄読会名' %>
     </p>
     <p>
-      <%= f.label :is_public, 'この抄読会を公開する' %>
+      <%= f.label :is_public, 'このリストを公開する' %>
       <%= f.check_box :is_public %>
     </p>
     <p class='form-title'>
