--- a/app/assets/stylesheets/themes/paper_lists.css.scss
+++ b/app/assets/stylesheets/themes/paper_lists.css.scss
@@ -64,6 +64,12 @@
           color: darken($IDENTITY_COLOR, 15);
           vertical-align: middle;
         }
+        &.fa-share-alt {
+          padding: 5px 2px 5px 8px;
+          font-size: 20px;
+          color: $GRAYAA;
+          vertical-align: middle;
+        }
       }
     }
     .title {
@@ -123,7 +129,7 @@
       font-weight: 600;
       padding-right: 20px;
     }
-    .created_at, .updated_at {
+    .created-at, .updated-at {
       display: inline-block;
       padding-right: 20px;
     }
@@ -133,6 +139,15 @@
       box-sizing: border-box;
       height: 26px;
       margin: 7px 5px;
+    }
+    .userlist {
+      .userlist-title {
+        font-weight: 600;
+      }
+      .auth-label {
+        margin-left: 20px;
+        font-weight: 500;
+      }
     }
   }
   .paper-list-menu {
