--- a/app/views/paper_lists/_paper_list_detail.html.erb
+++ b/app/views/paper_lists/_paper_list_detail.html.erb
@@ -13,10 +13,10 @@
       <%= paper_list.title %>
     </div>
     <% if paper_list.general? %>
-      <div class='created_at'>
+      <div class='created-at'>
         <%= paper_list.created_at.strftime('%Y/%m/%d %H:%M') %>作成
       </div>
-      <div class='updated_at'>
+      <div class='updated-at'>
         <%= paper_list.updated_at.strftime('%Y/%m/%d %H:%M') %>更新
       </div>
       <%= link_to '削除', paper_list_path(id: paper_list.id),
@@ -24,6 +24,18 @@
                                  class: 'destroy-btn flat-button-red',
                                  data: {confirm: '本当に削除してよろしいですか？'} %>
       <%= link_to '編集', edit_paper_list_path(id: paper_list.id), class: 'edit-btn flat-button-normal' %>
+    <% end %>
+    <% unless paper_list.shared_users.count == 0 %>
+      <div class='sharing-with'>
+        <%= link_to "#{paper_list.all_users.count}人のユーザーが共有中です", '#', class: 'toggle-userlist' %>
+      </div>
+      <div class='userlist' style='display:none;'>
+        <p class='userlist-title'>共有中のユーザー一覧</p>
+        <p><%= paper_list.user.email %><span class='auth-label'>管理者</span></p>
+        <% paper_list.shared_users.each do |user| %>
+          <p><%= user.email %></p>
+        <% end%>
+      </div>
     <% end %>
   </div>
   <div class='papers'>
@@ -36,6 +48,6 @@
   </div>
   <div class='paper-list-menu'>
     <%= link_to 'リストに論文を登録する', search_papers_path, class: 'paper-search-btn flat-button-identity2' %>
-    <%= link_to 'リストを共有する', '', class: 'share-btn flat-button-normal' %>
+    <%= link_to 'リストを共有する', edit_paper_list_path(id: paper_list.id), class: 'share-btn flat-button-normal' %>
   </div>
 </div>
