--- a/app/views/paper_lists/_paper_lists.html.erb
+++ b/app/views/paper_lists/_paper_lists.html.erb
@@ -1,6 +1,29 @@
 <h1 class='paper-lists-title'><%= title %></h1>
 <div class='paper-lists'>
-  <% paper_lists.each_with_index do |p, idx| %>
-    <%= render 'paper_lists/paper_list', paper_list: p, is_last: (idx + 1 == paper_lists.count) %>
+  <% paper_lists.each_with_index do |paper_list, idx| %>
+    <div class='<%="single-paper-list#{" last" if (idx + 1 == paper_lists.count)}"%>'>
+      <div class='icon'>
+        <% if paper_list.user.id != user.id %>
+          <i class="fa fa-share-alt"></i>
+        <% end %>
+      </div>
+      <div class='title'>
+        <%= paper_list.title %>
+      </div>
+      <div class='created_at'>
+        <%= paper_list.created_at.strftime('%Y/%m/%d') %>作成
+      </div>
+      <div class='updated_at'>
+        <%= paper_list.updated_at.strftime('%Y/%m/%d') %>更新
+      </div>
+      <% if paper_list.user.id == user.id %>
+        <%= link_to '削除', paper_list_path(id: paper_list.id),
+                                   method: :delete,
+                                   class: 'destroy-btn flat-button-red',
+                                   data: {confirm: '本当に削除してよろしいですか？'} %>
+      <% end %>
+      <%= link_to '編集', edit_paper_list_path(id: paper_list.id), class: 'edit-btn flat-button-normal' %>
+      <%= link_to 'リストを見る', paper_list_path(id: paper_list.id), class: 'show-btn flat-button-normal' %>
+    </div>
   <% end %>
 </div>
