--- a/app/views/papers/_paper.html.erb
+++ b/app/views/papers/_paper.html.erb
@@ -1,7 +1,7 @@
 <div class='<%="paper#{" last" if is_last}"%>'>
   <div class='summary'>
     <div class='popularity'>
-      <%= paper.popularity %>
+      <%= paper.popularity if paper.popularity != 0 %>
     </div>
     <div class='title'>
       <%= paper.title %>
@@ -46,7 +46,7 @@
           <%= label_tag :id, '抄読会（リスト）：' %>
           <%= select_tag :id,
                         options_for_select(
-                          user.paper_lists.map{|pl| [pl.title, pl.id] unless pl.id == ((defined? paper_list) && paper_list.try(:id))}.compact
+                          user.all_paper_lists.map{|pl| [pl.title, pl.id] unless pl.id == ((defined? paper_list) && paper_list.try(:id))}.compact
                         ), required: true, class: 'target-paper-list' %>
           にこの論文を
           <%= submit_tag "登録する", name: nil, class: 'add-paper-btn flat-button-identity2', data: {disable_with: '登録中...'} %>
