--- a/app/views/sidebar/_menu.html.erb
+++ b/app/views/sidebar/_menu.html.erb
@@ -1,5 +1,5 @@
 <div class='menu'>
-  <%= link_to search_papers_path, class: 'button register-paper flat-button-identity' do %>
+  <%= link_to search_papers_path, class: 'button register-paper flat-button-identity1' do %>
     <i class="fa fa-plus"></i>読んだ論文を登録する
   <% end %>
   <%# link_to '', class: 'button search-paper flat-button-identity1' do %>
