--- a/app/assets/stylesheets/themes/paper_lists.css.scss
+++ b/app/assets/stylesheets/themes/paper_lists.css.scss
@@ -84,7 +84,11 @@
       white-space: nowrap;
       max-width: 200px;
     }
-    .created_at, .updated_at {
+    .owner {
+      display: inline-block;
+      padding-right: 20px;
+    }
+    .count {
       display: inline-block;
       padding-right: 20px;
     }
@@ -102,6 +106,31 @@
   background-color: $WHITE;
   .paper-list-metainfo {
     padding: 20px 40px;
+    .icon {
+      display: inline-block;
+      width: 40px;
+      text-align: center;
+      i {
+        &.fa-star {
+          padding: 5px 2px 5px 0;
+          font-size: 30px;
+          color: $YELLOW;
+          vertical-align: middle;
+        }
+        &.fa-bookmark {
+          padding: 5px 5px 5px 0;
+          font-size: 30px;
+          color: darken($IDENTITY_COLOR, 15);
+          vertical-align: middle;
+        }
+        &.fa-share-alt {
+          padding: 5px 5px 5px 0;
+          font-size: 30px;
+          color: $GRAYAA;
+          vertical-align: middle;
+        }
+      }
+    }
     .title {
       display: inline-block;
       line-height: 40px;
