--- a/app/assets/stylesheets/themes/papers.css.scss
+++ b/app/assets/stylesheets/themes/papers.css.scss
@@ -55,6 +55,23 @@
       &:hover {
         background-color: $GRAYEE;
       }
+      .favorite {
+        float: left;
+        padding: 0 5px 0 10px;
+        i {
+          font-size: 18px;
+          line-height: 30px;
+          vertical-align: middle;
+          cursor: pointer;
+          &.fa-star { color: $YELLOW; }
+          &.fa-star-o {
+            color: $GRAYAA;
+            &:hover {
+              color: $GRAY66;
+            }
+          }
+        }
+      }
       .popularity {
         float: left;
         min-width: 50px;
@@ -100,6 +117,12 @@
         width: 100%;
         height: 30px;
         cursor: pointer;
+        i.fa-times {
+          font-size: 20px;
+          color: $GRAYAA;
+          float: right;
+          padding: 8px 15%;
+        }
       }
       .title {
         padding: 10px 0;
