--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@
 
   <div class="field">
     <%= f.label :department, '所属科' %><br />
-    <%= f.select :department, User.departments.map{|k, v| [t("department.#{k}"), v]} %>
+    <%= f.select :department, User.departments.map{|k, v| [t("department.#{k}"), v]}, prompt: '選択してください' %>
   </div>
 
   <div class="actions">
