--- a/app/views/papers/_paper.html.erb
+++ b/app/views/papers/_paper.html.erb
@@ -2,9 +2,9 @@
   <div class='summary'>
     <div class='favorite'>
       <% if user.favorite_list.has_paper?(paper) %>
-        <i class='fa fa-star'></i>
+        <i class='fa fa-star' data-favorite-list-id='<%= user.favorite_list.id %>'></i>
       <% else %>
-        <i class='fa fa-star-o'></i>
+        <i class='fa fa-star-o' data-favorite-list-id='<%= user.favorite_list.id %>'></i>
       <% end %>
     </div>
     <div class='popularity'>
